# flask-site

./: .gitattributes  .gitignore  README.md  a  main.py  models.py  pyproject.toml  requirements.txt  run.bat  run.sh  utils.py
instance/: produtos.db
templates/: index.html  products.html
