[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Julio Rafael <juliorafaelnft@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.7.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
